--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,400;6..12,600;6..12,800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap");
 
 body {
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito", sans-serif;
   font-weight: 400;
+  background: #f9f9f9;
 }
 
 .container {
   padding: 0 75px;
+}
+
+@media (max-width: 1024px) {
+  .container {
+    padding: 0 32px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    padding: 0 64px;
+  }
+}
+
+@media (max-width: 630px) {
+  .container {
+    padding: 0 10px;
+  }
 }
