Categories + Basket + Count

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -57,6 +57,11 @@
   color: #ffab08;
 }
 
+.social_item:focus {
+  outline: none;
+  color: #ffab08;
+}
+
 .contacts_title {
   margin-bottom: 24px;
 }
