--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,6 +2,7 @@
   background: url("./img/bg.png") no-repeat;
   background-position: bottom;
   background-size: 2880px;
+  margin-bottom: 40px;
 }
 
 .header_wrapper {
@@ -113,6 +114,4 @@
     font-size: 30px;
     margin-bottom: 26px;
   }
-
 }
-
