--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap");
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Nunito", sans-serif;
   font-weight: 400;
@@ -10,9 +14,22 @@ body {
   padding: 0 75px;
 }
 
-@media (max-width: 1024px) {
+.menu {
+  display: flex;
+  gap: 30px;
+  padding-bottom: 100px;
+}
+
+@media (max-width: 1100px) {
   .container {
     padding: 0 32px;
+  }
+}
+
+@media (max-width: 1023px) {
+  .menu {
+    display: flex;
+    flex-direction: column;
   }
 }
 
