--- a/src/index.css
+++ b/src/index.css
@@ -11,18 +11,22 @@ body {
 }
 
 .container {
-  padding: 0 75px;
+  padding-left: 75px;
+  padding-right: 75px;
 }
 
 .menu {
+  position: relative;
   display: flex;
+  justify-content: center;
   gap: 30px;
   padding-bottom: 100px;
 }
 
 @media (max-width: 1100px) {
   .container {
-    padding: 0 32px;
+    padding-left: 32px;
+    padding-right: 32px;
   }
 }
 
@@ -35,12 +39,14 @@ body {
 
 @media (max-width: 768px) {
   .container {
-    padding: 0 64px;
+    padding-left: 64px;
+    padding-right: 64px;
   }
 }
 
 @media (max-width: 630px) {
   .container {
-    padding: 0 10px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
