--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,17 @@
 
 * {
   box-sizing: border-box;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 body {
   font-family: "Nunito", sans-serif;
   font-weight: 400;
   background: #f9f9f9;
+}
+
+button {
+  cursor: pointer;
 }
 
 .container {
@@ -21,6 +26,11 @@ body {
   justify-content: center;
   gap: 30px;
   padding-bottom: 100px;
+}
+
+.offcsroll {
+  overflow-y: hidden;
+  /* margin-right: 12px; */
 }
 
 @media (max-width: 1100px) {
