--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -8,7 +8,6 @@
   justify-content: center;
   align-items: center;
   background: rgba(0, 0, 0, 0.8);
-  padding: 0 15px;
   transition: all 0.4s;
   pointer-events: none;
   opacity: 0;
@@ -23,7 +22,7 @@
   box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1);
   opacity: 0;
   transform: translateY(-150px);
-  transition: all 0.4s;
+  transition: transform 0.4s, opacity 0.4s;
 }
 
 .active_wrapper {
@@ -47,7 +46,7 @@
   border-radius: 50%;
 }
 
-@media (max-width: 570px) {
+@media (max-width: 560px) {
   .content_wrapper {
     position: absolute;
     top: 0;
