--- a/src/components/ModalProduct/ModalProduct.module.css
+++ b/src/components/ModalProduct/ModalProduct.module.css
@@ -146,7 +146,7 @@
   }
 }
 
-@media (max-width: 570px) {
+@media (max-width: 560px) {
   .modal_content_wrap {
     display: flex;
     flex-direction: column;
@@ -154,6 +154,7 @@
     height: 100%;
     border-radius: 0;
     padding: 32px 10px;
+    overflow-y: scroll;
   }
 
   .title {
