--- a/src/components/ProductList/ProductList.module.css
+++ b/src/components/ProductList/ProductList.module.css
@@ -4,6 +4,18 @@
   width: 300px;
 }
 
+.load {
+  display: block;
+  height: 10vmin;
+  margin: 0 auto;
+  margin-top: 100px;
+}
+
+.product_list {
+  flex-grow: 1;
+  max-width: 960px;
+}
+
 .product_list_title {
   font-size: 40px;
   font-weight: 600;
@@ -27,7 +39,7 @@
 .card_img {
   margin-bottom: 16px;
   max-width: 276px;
-  cursor: pointer;
+  min-height: 120px;
 }
 
 .img_item {
@@ -44,9 +56,16 @@
 }
 
 .card_name {
+  display: inline-block;
   font-size: 16px;
   line-height: 130%;
   margin-bottom: 29px;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+.card_name:hover {
+  color: #ffab08;
 }
 
 .weight {
@@ -89,9 +108,20 @@
   .cards_wrapper {
     grid-template-columns: repeat(2, 1fr);
   }
+
+  .product_list {
+    flex-grow: 1;
+    max-width: 630px;
+  }
 }
 
 @media (max-width: 1023px) {
+
+  .product_list {
+    flex-grow: 0;
+    max-width: none;
+  }
+
   .product_list_title {
     font-size: 28px;
     margin-bottom: 16px;
